[metadata]
name = peblarpy
version = 0.0.1
author = wyleung
url = https://github.com/wyleung/peblarpy
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir = 
    =src
packages = find:
install_requires=aiohttp>=3.9.4

[options.packages.find]
where=src